--- a/board2/board2/src/main/resources/templates/layouts/layout1.html
+++ b/board2/board2/src/main/resources/templates/layouts/layout1.html
@@ -7,6 +7,8 @@
 <!-- 공통 사용 js, css -->
 <link th:href="@{css/style.css}" rel="stylesheet">
 <script th:src="@{js/util.js}"></script>
+<!-- 각 페이지의 CSS가 작성될 위치 -->
+<th:block layout:fragment="css"></th:block>
 
 <!-- 공통 사용 jquery -->
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
