--- a/board2/board2/src/main/resources/templates/bbs/created.html
+++ b/board2/board2/src/main/resources/templates/bbs/created.html
@@ -77,6 +77,11 @@
 	<!-- javascript -->
 	<th:block layout:fragment="script">
 		<script th:inline="javascript">
+			var errorMessage = [[${errorMessage}]];
+			if (errorMessage != null) {
+				alert(errorMessage);
+			}
+		
 			function sendIt() {
 				var f = document.myForm;
 				var str = f.subject.value;
@@ -129,6 +134,8 @@
 				f.submit();
 				
 			}
+			
+
 		</script>
 	</th:block>
 
