--- a/company/company/src/main/resources/templates/html/commonList.html
+++ b/company/company/src/main/resources/templates/html/commonList.html
@@ -3,53 +3,61 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layouts/layout}">
 
-	<div layout:fragment="content" id="bbs">
-     <form action="common" method="post" name="myForm">		
-        <h1 style="text-align: center; margin-top:20px;">내 근태확인</h1>
-        <div class="input-group input-group-lg" style="padding-top:50px; width:500px; margin: 0 auto;" >
-            <span class="input-group-text" id="inputGroup-sizing-lg">사번 입력</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" name="empno">
-            <input type="button" value="확인" onclick="checkEmpno();"/>
-        </div>
-    </form>
+<div layout:fragment="content" id="bbs">
+	<form action="commonList" method="post" name="myForm">
+		<h1 style="text-align: center; margin-top: 20px;">내 근태확인</h1>
+		<div class="input-group input-group-lg"
+			style="padding-top: 50px; width: 500px; margin: 0 auto;">
+			<span class="input-group-text" id="inputGroup-sizing-lg">사번 입력</span>
+			<input type="text" class="form-control"
+				aria-label="Sizing example input"
+				aria-describedby="inputGroup-sizing-lg" name="empno"> <input
+				type="button" value="확인" onclick="checkEmpno();" />
+		</div>
+	</form>
 
-    <div class="list-group" id="result" style="display: none;">
-        <ul>
-            <li>
-                <span>이름</span>
-                <span id="name"></span>
-            </li>
-            <li>
-                <span>입사일</span>
-                <span id="hiredate"></span>
-            </li>
-        </ul>
-    </div>
+	<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">사번</th>
+				<th scope="col">이름</th>
+				<th scope="col">출근시간</th>
+				<th scope="col">퇴근시간</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:if="${#lists.size(commonList)} > 0"
+				 th:each="data:${commonList}">
+				<th scope="row" th:text="${data.empno}"></th>
+				<td th:text="${data.name}">Mark</td>
+				<td th:text="${data.come}">Otto</td>
+				<td th:text="${data.out}">@mdo</td>
+			</tr>
+			<tr th:if="${commonList} == null">
+				<th colspan="4" style="text-align: center;">사번을 입력하지 않으셨거나 잘못된
+					사번입니다.</th>
+			</tr>
+ 			<tr th:each="dataCount:${dataCount}"> 
+				<td colspan="5" id="footer"><a th:utext="${pageIndexList}"></a></td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 <th:block layout:fragment="script">
-    <script>
-        function checkEmpno() {
-            var empno = document.getElementById("empno").value;
-            empno = empno.trim();
+	<script>
+		function checkEmpno() {
+			var f = document.myForm;
+			var str = f.empno.value;
+			str = str.trim();
 
-            if (!empno) {
-                alert("사번을 입력하세요.");
-                return;
-            }
+			if (!str) {
+				alert("사번을 입력하세요.");
+				f.empno.focus();
+				return;
+			}
 
-            // AJAX 요청을 통해 서버에서 사번에 대한 정보를 받아온 뒤, 결과를 출력
-            // 이 예시에서는 간략하게 진행하기 위해 정적인 데이터를 사용하였습니다.
-            var data = {
-                name: "John Doe",
-                hiredate: "2022-01-01"
-            };
-
-            document.getElementById("name").innerText = data.name;
-            document.getElementById("hiredate").innerText = data.hiredate;
-
-            // 결과 출력을 위해 해당 요소를 보이도록 설정
-            document.getElementById("result").style.display = "block";
-        }
-    </script>
+			f.submit();
+		}
+	</script>
 </th:block>
 </html>
