--- a/company/company/src/main/resources/templates/html/commonIndex.html
+++ b/company/company/src/main/resources/templates/html/commonIndex.html
@@ -8,7 +8,7 @@
         <h1 style="text-align: center;">출퇴근 관리</h1>
         <div class="input-group input-group-lg" style="padding-top:50px; width:500px; margin: 0 auto;" >
             <span class="input-group-text" id="inputGroup-sizing-lg">사번 입력</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" name="empno">
+            <input type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" name="empno">
             <input type="button" value="확인" onclick="checkEmpno();"/>
         </div>
     </form>
