--- a/company/company/src/main/resources/templates/fragments/header.html
+++ b/company/company/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="commonList">내근태확인</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">퇴사(행복해지기)</a></li>
+					<li class="nav-item"><a class="nav-link" href="commonDrop">퇴사(행복해지기)</a></li>
 				</ul>
 			</div>
 		</div>
