--- a/sns/sns/src/main/resources/templates/fragments/header.html
+++ b/sns/sns/src/main/resources/templates/fragments/header.html
@@ -53,7 +53,7 @@
             <li class="current"><a href="main" title="">홈</a></li>
             <li><a href="list" title="">목록으로 보기</a></li>
             <li><a href="myProfile" title="">내 프로필</a></li>
-            <li><a href="page-contact.html" title="">문의하기</a></li>
+            <li><a href="contact" title="">문의하기</a></li>
             <li class="has-children">
               <a href="#0" title="">관리자메뉴</a>
               <ul class="sub-menu">
