--- a/sns/sns/src/main/resources/templates/member/myProfile.html
+++ b/sns/sns/src/main/resources/templates/member/myProfile.html
@@ -30,7 +30,7 @@
 
 	<div class="content__page-header" style="display: flex; justify-content: space-between; align-items: center;">
     	<h1 class="display-1" style="margin: 0 auto;">닉네임</h1>
-        <button type="button" class="btn btn-secondary">수정하기</button>
+        <button type="button" class="btn btn-secondary" onclick="location.href='myProfileModify' ">수정하기</button>
 	</div>
 
 
