--- a/sns/sns/src/main/resources/templates/member/myProfileModify.html
+++ b/sns/sns/src/main/resources/templates/member/myProfileModify.html
@@ -6,11 +6,37 @@
 <!-- 각 페이지의 CSS가 작성될 위치 -->
 <th:block layout:fragment="css">
 	<style>
-</style>
+		.text-center {
+			text-align: center;
+		}
+
+		.margin-auto {
+			margin: 0 auto;
+		}
+	</style>
 </th:block>
 
 <div layout:fragment="content">
+	<div class="s-content content">
+	</div>
+	<main class="row content__page">
+		<section class="column large-full entry format-standard">
+			<form action="" method="post" class="text-center">
+				<div class="content__page-header">
+					<h1>
+						<input type="text" class="display-1 margin-auto" value="닉네임">
+					</h1>
+				</div>
+				<!-- end content__page-header -->
+				<textarea style="text-align: center; margin: 0 auto; width: 500px;" class="margin-auto">소개글</textarea>
+				<div class="text-center">
+					<button type="submit" class="btn btn-secondary margin-auto">수정완료</button>
+				</div>
+			</form>
+		</section>
+	</main>
 </div>
+<!-- end s-content -->
 
 <!-- 각 페이지의 스크립트가 작성될 위치 -->
 <th:block layout:fragment="script">
