--- a/sns/sns/src/main/resources/templates/fragments/header.html
+++ b/sns/sns/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+		xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	     <!-- site header
         ================================================== -->
       <header class="s-header header" th:fragment="header">
        <div class="header__top">
           <div class="header__logo">
-            <a class="site-logo" href="main">
-              <img src="images/logo.svg" alt="Homepage" />
+            <a class="site-logo" href="main" sec:authorize="isAuthenticated()">
+              <img src="/images/logo.svg" alt="Homepage" />
             </a>
           </div>
 
@@ -50,11 +51,13 @@
 
         <nav class="header__nav-wrap">
           <ul class="header__nav">
-            <li class="current"><a href="main" title="">홈</a></li>
-            <li><a href="list" title="">목록으로 보기</a></li>
-            <li><a href="myProfile" title="">내 프로필</a></li>
-            <li><a href="contact" title="">문의하기</a></li>
-            <li class="has-children">
+            <li class="current"><a href="main" title="" sec:authorize="isAuthenticated()">홈</a></li>
+            <li><a href="/list" title="" sec:authorize="isAuthenticated()">목록으로 보기</a></li>
+            <li><a href="/myProfile" title="" sec:authorize="isAuthenticated()">내 프로필</a></li>
+            <li><a href="/login" title="" sec:authorize="isAnonymous()">로그인</a></li>
+            <li><a href="/members/logout" title="" sec:authorize="isAuthenticated()">로그아웃</a></li>
+            <li><a href="/contact" title="">문의하기</a></li>
+            <li class="has-children" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
               <a href="#0" title="">관리자메뉴</a>
               <ul class="sub-menu">
                 <li><a href="category.html">신고 목록</a></li>
