--- a/sns/sns/src/main/resources/templates/index.html
+++ b/sns/sns/src/main/resources/templates/index.html
@@ -2,150 +2,125 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
 <head>
-<meta charset="utf-8">
-<title>Securex - CCTV Camera Website Template</title>
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="" name="keywords">
-<meta content="" name="description">
+  <meta charset="utf-8">
+  <title>Securex - CCTV Camera Website Template</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
 
-<!-- Favicon -->
-<link href="img/favicon.ico" rel="icon">
+  <!-- Favicon -->
+  <link href="img/favicon.ico" rel="icon">
 
-<!-- Google Web Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-	href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Roboto:wght@500;700;900&display=swap"
-	rel="stylesheet">
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
 
-<!-- Icon Font Stylesheet -->
-<link
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
-	rel="stylesheet">
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
-	rel="stylesheet">
+  <!-- Icon Font Stylesheet -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-<!-- Libraries Stylesheet -->
-<link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
-<link th:href="@{/lib/owlcarousel/assets/owl.carousel.min.css}"
-	rel="stylesheet">
-<link th:href="@{/lib/lightbox/css/lightbox.min.css}" rel="stylesheet">
+  <!-- Libraries Stylesheet -->
+  <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
+  <link th:href="@{/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
+  <link th:href="@{/lib/lightbox/css/lightbox.min.css}" rel="stylesheet">
 
-<!-- Customized Bootstrap Stylesheet -->
-<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
-<!-- Template Stylesheet -->
-<link th:href="@{/css/styleindex.css}" rel="stylesheet">
+  <!-- Template Stylesheet -->
+  <link th:href="@{/css/styleindex.css}" rel="stylesheet">
+  <style>
+    .owl-carousel-item img {
+      object-fit: cover;
+    }
+  </style>
 </head>
 
 <body style="height: 100vh">
-	<!-- Spinner Start -->
-	<div id="spinner"
-		class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-		<div class="spinner-border text-primary"
-			style="width: 3rem; height: 3rem;" role="status">
-			<span class="sr-only">Loading...</span>
-		</div>
-	</div>
-	<!-- Spinner End -->
+  <!-- Spinner Start -->
+  <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+  <!-- Spinner End -->
 
-	<!-- Carousel Start -->
-	<div class="container-fluid p-0 pb-5" style="height: 100%">
-		<div class="owl-carousel header-carousel position-relative">
-			<div class="owl-carousel-item position-relative"
-				style="height: 100vh">
-				<img class="img-fluid" src="img/indeximg1.jpg" alt=""
-					style="object-fit: cover;">
-				<div class="carousel-inner" style="height: 100%">
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-12 col-lg-8 text-center">
+  <!-- Carousel Start -->
+  <div class="container-fluid p-0 pb-5" style="height: 100%">
+    <div class="owl-carousel header-carousel position-relative">
+      <div class="owl-carousel-item position-relative" style="height: 100vh">
+        <img class="img-fluid" src="img/indeximg1.jpg" alt="">
+        <div class="carousel-inner" style="height: 100%">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-8 text-center">
+                <h1 class="display-3 text-white animated slideInDown mb-4">시작하세요!</h1>
+                <p class="fs-5 text-white mb-4 pb-2">새로운 친구들과 소통하고 즐거운 시간을 보내세요!</p>
+                <a href="/members/login" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft" id="login-button">로그인</a>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="owl-carousel-item position-relative" style="height: 100vh">
+        <img class="img-fluid" src="img/indeximg2.jpg" alt="">
+        <div class="carousel-inner">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-8 text-center">
+                <h1 class="display-3 text-white animated slideInDown mb-4">시작하세요!</h1>
+                <p class="fs-5 text-white mb-4 pb-2">친구들과 함께 소중한 순간을 공유하세요!</p>
+                <a href="/members/login" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft" id="login-button">로그인</a>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="owl-carousel-item position-relative" style="height: 100vh">
+        <img class="img-fluid" src="img/indeximg3.jpg" alt="">
+        <div class="carousel-inner">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-12 col-lg-8 text-center">
+                <h1 class="display-3 text-white animated slideInDown mb-4">시작하세요!</h1>
+                <p class="fs-5 fw-medium text-white mb-4 pb-2">다양한 사람들과 연결되어 더 넓은 세상을 경험하세요!</p>
+                <a href="/members/login" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft" id="login">로그인</a>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Carousel End -->
 
-								<h1 class="display-3 text-white animated slideInDown mb-4">시작하세요!</h1>
-								<p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita
-									lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et
-									diam justo clita et kasd rebum sea elitr.</p>
-								<a href="login"
-									class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft"
-									id="login-button">로그인</a> <a href="register"
-									class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">회원가입</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="owl-carousel-item position-relative"
-				style="height: 100vh">
-				<img class="img-fluid" src="img/indeximg2.jpg" alt="">
-				<div class="carousel-inner">
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-12 col-lg-8 text-center">
-								<h1 class="display-3 text-white animated slideInDown mb-4">시작하세요!</h1>
-								<p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita
-									lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et
-									diam justo clita et kasd rebum sea elitr.</p>
-								<a href="login.html"
-									class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft"
-									id="login-button">로그인</a> <a href="register"
-									class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">회원가입</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="owl-carousel-item position-relative"
-				style="height: 100vh">
-				<img class="img-fluid" src="img/indeximg3.jpg" alt="">
-				<div class="carousel-inner">
-					<div class="container">
-						<div class="row justify-content-center">
-							<div class="col-12 col-lg-8 text-center">
-								<h1 class="display-3 text-white animated slideInDown mb-4">시작하세요!</h1>
-								<p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr
-									justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd
-									rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-								<a href="login"
-									class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft"
-									id="login">로그인</a> <a href="register"
-									class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">회원가입</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+  <!-- JavaScript Libraries -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script th:src="@{/lib/wow/wow.min.js}"></script>
+  <script th:src="@{/lib/easing/easing.min.js}"></script>
+  <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
+  <script th:src="@{/lib/counterup/counterup.min.js}"></script>
+  <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
+  <script th:src="@{/lib/isotope/isotope.pkgd.min.js}"></script>
+  <script th:src="@{/lib/lightbox/js/lightbox.min.js}"></script>
 
+  <!-- Template Javascript -->
+  <script th:src="@{/js/mainindex.js}"></script>
 
-		</div>
-	</div>
-	<!-- Carousel End -->
-
-	<!-- JavaScript Libraries -->
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-	<script th:src="@{/lib/wow/wow.min.js}"></script>
-	<script th:src="@{/lib/easing/easing.min.js}"></script>
-	<script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
-	<script th:src="@{/lib/counterup/counterup.min.js}"></script>
-	<script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
-	<script th:src="@{/lib/isotope/isotope.pkgd.min.js}"></script>
-	<script th:src="@{/lib/lightbox/js/lightbox.min.js}"></script>
-
-	<!-- Template Javascript -->
-	<script th:src="@{/js/mainindex.js}"></script>
-
-	<script>
+  <script>
     window.addEventListener('DOMContentLoaded', (event) => {
-        document.body.style.overflow = 'hidden'; // body 요소의 스크롤바를 숨김
+      document.body.style.overflow = 'hidden'; // body 요소의 스크롤바를 숨김
 
-        // 스크롤바 숨김을 원하는 요소의 클래스나 ID를 선택하여 스크롤바를 숨김
-        var element = document.querySelector('.carousel-inner');
-        element.style.overflow = 'hidden';
+      // 스크롤바 숨김을 원하는 요소의 클래스나 ID를 선택하여 스크롤바를 숨김
+      var element = document.querySelector('.carousel-inner');
+      element.style.overflow = 'hidden';
     });
-
-</script>
+  </script>
 </body>
 
 </html>
