--- a/sns/sns/src/main/resources/templates/member/login.html
+++ b/sns/sns/src/main/resources/templates/member/login.html
@@ -2,80 +2,303 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-        }
+<meta charset="utf-8">
+<title>Securex - CCTV Camera Website Template</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta content="" name="keywords">
+<meta content="" name="description">
 
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
 
-        .container h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
+<style>
+.error {
+	font-size: 10px;
+	color: rgb(242,116,13);
+}
+.fieldError {
+	font-size: 12px;
+	color: rgb(242,116,13);
+}
+body {
+	margin:0;
+	padding:0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-image: url("/img/indeximg1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden; /* Add overflow hidden to hide scrollbars */
+}
 
-        .form-group {
-            margin-bottom: 20px;
-            margin-right: 10px;
-        }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw; /* Use 100vw instead of 100% for full viewport width */
+  height: 100vh; /* Use 100vh instead of 100% for full viewport height */
+  background-color: rgba(22, 22, 22, 0.7);
+}
+*,:after,:before{box-sizing:border-box}
+.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after{clear:both;display:block}
+a{color:inherit;text-decoration:none}
 
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
+  .login-wrap {
+    width: 100%;
+    max-width: 525px;
+    min-height: 670px;
+    position: relative;
+    background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+  }
+  .login-html {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    padding: 90px 70px 50px 70px;
+    background: rgba(10, 12, 16, 0.9);
+    color: #818080;
+  }
+.login-html .sign-in-htm,
+.login-html .sign-up-htm{
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  position:absolute;
+  transform:rotateY(180deg);
+  backface-visibility:hidden;
+  transition:all .4s linear;
+}
+.login-html .sign-in,
+.login-html .sign-up,
+.login-form .group .check{
+  display:none;
+}
+.login-html .tab,
+.login-form .group .label,
+.login-form .group .button{
+  text-transform:uppercase;
+}
+.login-html .tab{
+  font-size:22px;
+  margin-right:15px;
+  padding-bottom:5px;
+  margin:0 15px 10px 0;
+  display:inline-block;
+  border-bottom:2px solid transparent;
+}
+.login-html .sign-in:checked + .tab,
+.login-html .sign-up:checked + .tab{
+  color:#fff;
+  border-color:#1161ee;
+}
+.login-form{
+  min-height:345px;
+  position:relative;
+  perspective:1000px;
+  transform-style:preserve-3d;
+}
+.login-form .group{
+  margin-bottom:15px;
+}
+.login-form .group .label,
+.login-form .group .input,
+.login-form .group .button{
+  width:100%;
+  color:#fff;
+  display:block;
+}
+.login-form .group .input,
+.login-form .group .button{
+  border:none;
+  padding:15px 20px;
+  border-radius:25px;
+  background:rgba(255,255,255,.1);
+}
+.login-form .group input[data-type="password"]{
+  text-security:circle;
+  -webkit-text-security:circle;
+}
+.login-form .group .label{
+  color:#aaa;
+  font-size:12px;
+}
+.login-form .group .button{
+  background:#1161ee;
+}
+.login-form .group label .icon{
+  width:15px;
+  height:15px;
+  border-radius:2px;
+  position:relative;
+  display:inline-block;
+  background:rgba(255,255,255,.1);
+}
+.login-form .group label .icon:before,
+.login-form .group label .icon:after{
+  content:'';
+  width:10px;
+  height:2px;
+  background:#fff;
+  position:absolute;
+  transition:all .2s ease-in-out 0s;
+}
+.login-form .group label .icon:before{
+  left:3px;
+  width:5px;
+  bottom:6px;
+  transform:scale(0) rotate(0);
+}
+.login-form .group label .icon:after{
+  top:6px;
+  right:0;
+  transform:scale(0) rotate(0);
+}
+.login-form .group .check:checked + label{
+  color:#fff;
+}
+.login-form .group .check:checked + label .icon{
+  background:#1161ee;
+}
+.login-form .group .check:checked + label .icon:before{
+  transform:scale(1) rotate(45deg);
+}
+.login-form .group .check:checked + label .icon:after{
+  transform:scale(1) rotate(-45deg);
+}
+.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
+  transform:rotate(0);
+}
+.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
+  transform:rotate(0);
+}
 
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
+.hr{
+  height:2px;
+  margin:60px 0 50px 0;
+  background:rgba(255,255,255,.2);
+}
+.foot-lnk{
+  text-align:center;
+}
 
-        }
-
-        .form-group button {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            background-color: #4caf50;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 0 auto;
-        }
-    </style>
+</style>
 </head>
 
-<body>
-    <div class="container">
-        <h1>Login</h1>
-        <form action="" method="post">
-            <div class="form-group">
-                <label for="username">이메일:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">비밀번호:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="form-group">
-                <button type="submit">Login</button>
-            </div>
+<body style="height: 100vh">
+<div class="overlay"></div>
+	<!-- Carousel Start -->
+	<div class="login-wrap">
+  <div class="login-html">
+    <!-- <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">로그인</label>
+    <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">회원가입</label> -->
+    <div class="login-form">
+      <div class="sign-in-htm">
+      <!-- 로그인 부분 -->
+    	<form action="/members/login" method="post">
+	        <div class="group">
+	          <label  th:for="email" class="label">이메일</label>
+	          <input id="email" name="email" type="text" class="input">
+	        </div>
+	        <div class="group">
+	          <label th:for="password" class="label">비밀번호</label>
+	          <input id="password" name="password" type="password" class="input" data-type="password">
+	        </div>
+	        <div class="group">
+	          <input id="check" type="checkbox" class="check" checked>
+	          <label for="check"><span class="icon"></span> 이메일 기억 </label>
+	        </div>
+	        <div class="group">
+	          <input type="submit" class="button" value="로그인">
+	        </div>
+	        <input type="hidden" th:name="${_csrf.parameterName}"th:value="${_csrf.token}">
         </form>
+        <!-- 로그인 부분 -->
+        <div class="hr"></div>
+        <div class="foot-lnk">
+        	<p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+          <a href="#forgot">비밀번호를 잊으셨나요?</a>
+        </div>
+      </div>
+      <div class="sign-up-htm">
+      <!-- 회원가입 부분 -->
+      <form method="post" action="/members/register" th:object="${memberFormDto}">
+	        <div class="group">
+	          <label th:for="email" class="label">이메일</label>
+	          <input th:field="*{email}" type="text" class="input">
+	          <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect Data</p>
+	        </div>
+	        <div class="group">
+	          <label th:for="password" class="label">비밀번호</label>
+	          <input th:field="*{password}" type="password" class="input" data-type="password">
+	          <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect Data</p>
+	        </div>
+	        <div class="group">
+	          <label th:for="nickname" class="label">닉네임</label>
+	          <input th:field="*{nickname}" type="text" class="input">
+	          <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect Data</p>
+	        </div>
+	        <div class="group">
+	          <input type="submit" class="button" value="회원가입">
+	        </div>
+	         <input type="hidden" th:name="${_csrf.parameterName}"th:value="${_csrf.token}">
+        </form>
+        <!-- 회원가입 부분 -->
+        <div class="hr"></div>
+        <div class="foot-lnk">
+          <label for="tab-1">이미 계정이 있으신가요?</label>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
+	<!-- Carousel End -->
+
+	<!-- JavaScript Libraries -->
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- 	<script th:src="@{/lib/wow/wow.min.js}"></script>
+	<script th:src="@{/lib/easing/easing.min.js}"></script>
+	<script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
+	<script th:src="@{/lib/counterup/counterup.min.js}"></script>
+	<script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
+	<script th:src="@{/lib/isotope/isotope.pkgd.min.js}"></script>
+	<script th:src="@{/lib/lightbox/js/lightbox.min.js}"></script>
+ -->
+	<!-- Template Javascript -->
+	<!-- <script th:src="@{/js/mainindex.js}"></script> -->
+
+	<script th:inline="javascript">
+    window.addEventListener('DOMContentLoaded', (event) => {
+      document.body.style.overflow = 'hidden'; // body 요소의 스크롤바를 숨김
+
+      // 스크롤바 숨김을 원하는 요소의 클래스나 ID를 선택하여 스크롤바를 숨김
+      var element = document.querySelector('.carousel-inner');
+      element.style.overflow = 'hidden';
+    });
+    
+    
+   /*  var registerError = [[${registerChk}]];
+    
+    if (registerError != null) {
+    	$(".login-html").prepend('<input id="tab-1" type="radio" name="tab" class="sign-in"><label for="tab-1" class="tab">로그인</label> <input id="tab-2" type="radio" name="tab" class="sign-up" checked><label for="tab-2" class="tab" >회원가입</label>')
+    } else if (registerError == null) {
+    	$(".login-html").prepend('<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">로그인</label> <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">회원가입</label>')
+    } */
+	
+    var registerError = /*[[${registerChk}]]*/ null;
+
+    if (registerError != null) {
+        $(".login-html").prepend('<input id="tab-1" type="radio" name="tab" class="sign-in"><label for="tab-1" class="tab">로그인</label> <input id="tab-2" type="radio" name="tab" class="sign-up" checked><label for="tab-2" class="tab">회원가입</label>');
+    } else {
+        $(".login-html").prepend('<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">로그인</label> <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">회원가입</label>');
+    }
+  </script>
 </body>
 
 </html>
