--- a/shopmax/shopmax/src/main/resources/templates/member/memberLoginForm.html
+++ b/shopmax/shopmax/src/main/resources/templates/member/memberLoginForm.html
@@ -69,8 +69,36 @@
 
 <!-- 각 페이지의 스크립트가 작성될 위치 -->
 <th:block layout:fragment="script">
+	<script type="text/javascript" th:src="@{/js/cookie.js}"></script>
 	<script th:inline="javascript">
-
+		/* 이메일 기억 설정 */
+		$(document).ready(function() {
+			var userInputId = getCookie("userInputId"); // 쿠키값(이메일주소) 가져오기
+			var setCookieYN = getCookie("setCookieYN"); // 쿠키값을(이메일 기억 YN) 가져옴.
+			
+			if(setCookieYN == 'Y') { // 이메일 저장 여부가 Y면
+				$("#id_save").prop("checked", true); // 이메일 저장 체크박스를 체크한다.
+				$("#email").val(userInputId); // 쿠키에서 가져온 이메일을 input창에 넣어줌.
+			} else {
+				$("#id_save").prop("checked", false);
+			}
+			
+			/* 로그인 버튼 클릭 시 쿠키에 이메일 저장여부, 이메일 저장 */
+			$("#loginbtn").click(function(){
+				if($("#id_save").is(":checked")) { // 이메일 저장 체크 확인
+					var userInputId = $("#email").val(); // 이메일 값
+					
+					// 쿠키 생성
+					setCookie("userInputId", userInputId, 60); // 이메일 저장
+					setCookie("setCookieYN", "Y", 60); // 이메일 저장여부 저장
+				} else {
+					// 쿠키 삭제
+					deleteCookie("userInputId");
+					deleteCookie("setCookieYN");
+				}
+				
+			});
+		});
 	</script>
 </th:block>
 
